pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-default-backend-no-rules.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-default-backend-no-rules
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
